# dataset-embeddings-guardrails

./: README.md  arize_ArizeDatasetEmbeddings_guard_gpt-3.5-turbo_output.txt  arize_JailbreakEmbeddings_guard_gpt-3.5-turbo_output.txt  gpt-3.5-turbo_baseline_output.txt  pyproject.toml
benchmarks/: benchmark_guard_on_dataset.py  jailbreak_prompts_2023_05_07.csv
tests/: test_validator.py
validator/: Arize_JailbreakEmbeddings_Guardrail_Demo.ipynb  __init__.py  benchmark_guard_on_dataset.py  constants.py  jailbreak_examples.txt  jailbreak_prompts_2023_05_07.csv  main.py  post-install.py
