[project]
name = "dataset-embeddings"
version = "0.0.0"
description = "A Guardrails AI validator that guards against input based on embeddings similarity to a small dataset of known inputs"
authors = [
    {name = "Julia Gomes", email = "julia@arize.com"}
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">= 3.8.1"
dependencies = [
    "guardrails-ai>=0.4.0",
    "llama-index>=0.10.3",
    "nltk>3.0, <=3.8.1"
]

[project.optional-dependencies]
dev = [
    "pyright",
    "pytest",
    "ruff"
] 

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-rP"
testpaths = [
    "tests"
]

[tool.pyright]
include = ["validator"]

[tool.ruff]
exclude = ["*.ipynb", "*.md", "*.txt"]